# FER-RProg

./: README.md
lab2/: CMakeLists.txt  package.xml
lab2/launch/: chase_mouse.launch  chase_second_turtle.launch
lab2/scripts/: turtle_chaser_controller_node.py  turtle_mouse_node.py
lab3/: CMakeLists.txt  package.xml
lab3/bags/: chase_mouse_2023-11-04-00-53-37.bag  chase_mouse_2023-11-04-00-53-37_processed.bag  chase_second_turtle_2023-11-04-00-55-34.bag  chase_second_turtle_2023-11-04-00-55-34_processed.bag  stage_exploration_simple_world.bag
lab3/rviz/: lab3.rviz  lab3_stage.rviz
lab3/scripts/: laserscan_to_points.py  laserscan_to_points_task3.py  trajectory_visualization.py
lab4/: CMakeLists.txt  sergio_estevao.cpp
lab5/Game/: turtle_game.cpp
lab5/Lawnmower/: CMakeLists.txt  package.xml
lab5/Lawnmower/launch/: sergio_estevao.launch
lab5/Lawnmower/src/: lawnmower_turtle_node.cpp
lab6/: sergio_estevao.yaml
lab6/sent/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  sergio_estevao.launch
lab7/Task 3/apriltag_navigation/: CMakeLists.txt  package.xml
lab7/Task 3/apriltag_navigation/launch/: lab7_jmbag.launch
lab7/Task 3/apriltag_navigation/maps/: lab7.cfg  lab7.world
lab7/Task 3/apriltag_navigation/maps/bitmaps/: lab7.yaml
lab7/Task 3/apriltag_navigation/src/: apriltag_nav.cpp
