<?xml version="1.0"?>
<package format="2">
  <name>lab2_0036563035</name>
  <version>0.0.0</version>
  <description>The lab2_0036563035 package</description>
  <maintainer email="sergio@todo.todo">sergio</maintainer>
  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/lab2_0036563035</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>teleop_twist_keyboard</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>
  <build_export_depend>teleop_twist_keyboard</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
